# bsl-context

./: CHANGELOG.md  Cargo.toml  README.md  README_RU.md
.github/workflows/: release.yml
configs/: config.toml.example
crates/bsl-parse/: Cargo.toml
crates/bsl-parse/src/: lib.rs
crates/bsl-parse/tests/: corpus_query_texts.rs
crates/bsl-validator/: Cargo.toml
crates/bsl-validator/src/: check.rs  config_objects.rs  context_names.rs  directives.rs  expression.rs  lib.rs  module.rs  query_rules.rs  scope.rs  symbols.rs
crates/bsl-validator/tests/: config_objects.rs  corpus_query_rules.rs  query_rules.rs  real_expression.rs  real_module.rs  real_shadowed.rs
crates/lite-index/: Cargo.toml
crates/lite-index/src/: lib.rs  main.rs
crates/lite-index/tests/: build_test.rs  object_schema_merge.rs  object_xml.rs
crates/platform-index/src/: storage.rs
crates/sdbl-parse/: Cargo.toml
crates/sdbl-parse/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/sdbl-parse/tests/: corpus_parse.rs  parse_queries.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  http.rs  main.rs  mcp_server.rs
crates/server/tests/: corpus_config_objects.rs  corpus_query_rules_lite.rs  live_code_index_source.rs  real_mcp.rs
crates/symbol-source/: Cargo.toml
crates/symbol-source/src/: lib.rs
scripts/: analyze_argcount_after.py
