[workspace]
resolver = "2"
members = [
    "crates/hbk-reader",
    "crates/hbk-parser",
    "crates/platform-index",
    "crates/bsl-parse",
    "crates/bsl-validator",
    "crates/lite-index",
    "crates/symbol-source",
    "crates/server",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "MCP-сервер контекста платформы 1С (типы, методы, перечисления + валидация BSL-кода)"
authors = ["regsorm-lab"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP-протокол
rmcp = { version = "1.3", features = ["server", "transport-streamable-http-server", "macros"] }

# HTTP-сервер
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Конфиг
toml = "0.8"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Ошибки
anyhow = "1"
thiserror = "2"

# HBK-парсинг (Phase 1+)
byteorder = "1"
flate2 = "1"
zip = "2"
encoding_rs = "0.8"

# HTML-парсинг (Phase 2)
scraper = "0.21"
ego-tree = "0.9"

# Регулярные выражения / glob
regex = "1"

# BSL-парсер (Phase 6)
tree-sitter = "0.25"
# Грамматика BSL (1С:Предприятие) для tree-sitter. Используется в
# `validate_module` для извлечения объявлений Процедура/Функция.
# Заменила `tree-sitter-onescript` в 0.6.0: та не разбирала двойную индексацию
# (`Знач["a"]["b"]`) и на замере по 14905 модулям УТ давала ERROR в 1328 файлах
# против 208, теряя 1684 объявления против 34.
tree-sitter-bsl = "0.1.7"

# Утилиты
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
walkdir = "2"

# Тесты
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
