[package]
name = "lite-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Облегчённый индекс методов конфигурации 1С: только объявления, без графов"

[dependencies]
bsl-parse = { path = "../bsl-parse" }
rusqlite = { version = "0.32", features = ["bundled"] }
rayon = "1"
anyhow = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "bsl-lite-index"
path = "src/main.rs"
